--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "apollo-server": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "formik": "^2.4.5",
     "graphql": "^16.8.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
